# torchdisorder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  interactive.sh  pyproject.toml  random_md.h5md  requirements.txt  setup_env.sh  submit.sh  submit_multi_gpu.sh  torchdisorder.sh  torchdisorder_2.sh  torchdisorder_3.sh  torchdisorder_4.sh  torchdisorder_5.sh
configs/: config.yaml  config_2.yaml  config_3.yaml  config_4.yaml  config_5.yaml
configs/data/: FeOx.yaml  GeO2.yaml  LiPS.yaml  NaTaCl6.yaml  Si.yaml  SiO2.yaml  dataclass.yaml  lipon.yaml
configs/experiment/: basic.yaml
configs/structure/: GeO2.yaml  LiPS.yaml  LiPS_amorphous.yaml  NaTaCl6_halide.yaml  germanium_oxide.yaml  iron_oxide.yaml  iron_oxide_1.yaml  iron_oxide_2.yaml  iron_oxide_3.yaml  iron_oxide_4.yaml  iron_oxide_5.yaml  lipon.yaml  silica.yaml
configs/trainer/: AugLag.yaml  adam.yaml  cooper.yaml  mace.yaml
configs/wandb/: disabled.yaml  enabled.yaml
data-release/cif-generation/: GeO2_generator.py
data-release/crystal-structures/: Fe2O3.cif  LiPON_defected.cif  NaTaCl6.cif  c-SiO2.cif  epsilon_Fe2O3_iso_1.cif  epsilon_Fe2O3_iso_5.cif  glass_67Li2S.cif  scale.py
data-release/environment/: glass_67Li2S_P_environments.txt
data-release/json/: glass_67Li2S_P_environments.json  glass_67Li2S_constraints.json  sio2_glass_Si_environments.json
data-release/xrd_measurements/Fe2O3/: F_of_Q.csv  F_of_Q_real.csv  T_of_r.csv
data-release/xrd_measurements/GeO2/: F_of_Q.csv  I_Q  T_r  geo2_preprocess.py
data-release/xrd_measurements/Li3PS4_gamma/: F_of_Q.csv  T_of_r.csv
data-release/xrd_measurements/NaTaCl6/: F_of_Q.csv  checking.py
data-release/xrd_measurements/NaiLiI/: F_of_Q.csv  T_of_r.csv
data-release/xrd_measurements/Si/: annealed-S-of-Q.csv
data-release/xrd_measurements/SiO2/: F_of_Q.csv  T_of_r.csv  source.txt
data-release/xrd_measurements/li2.99_po3.38_n0.41/: T_of_r.csv
data/cif-generation/: LiPs_generator2.py  geo2_generator.py  lps_generator.py
data/crystal-structures/: Li3PS4_beta.cif  Li3PS4_gamma.cif  LiPON_defected_original.cif  c-Si.cif  epsilon_Fe2O3_iso_2.cif  epsilon_Fe2O3_iso_3.cif  epsilon_Fe2O3_iso_4.cif  geo2_glass.cif  glass_67Li2S_NoLi.cif  glass_67Li2S_WithLi.cif  glass_67Li2S_small.cif  glass_70Li2S_small.cif  glass_75Li2S.cif  glass_75Li2S_small.cif  my_fe2o3.cif  sio2_glass.cif
data/environment/: geo2_glass_Ge_environments.json  geo2_glass_Ge_environments.txt  glass_67Li2S_P_environments.json  glass_67Li2S_P_environments.txt  glass_67Li2S_WithLi_P_environments.json  glass_67Li2S_WithLi_P_environments.txt  glass_67Li2S_small_P_environments.json  glass_67Li2S_small_P_environments.txt  glass_70Li2S_P_environments.json  glass_70Li2S_P_environments.txt  glass_70Li2S_small_P_environments.json  glass_75Li2S_P_environments.json  glass_75Li2S_P_environments.txt  glass_75Li2S_small_P_environments.json  glass_75Li2S_small_P_environments.txt  sio2_glass_Si_environments.json  sio2_glass_Si_environments.txt
data/json/: geo2_glass_constraints.json  glass_67Li2S_NoLi_constraints.json  glass_67Li2S_WithLi_constraints.json  glass_67Li2S_constraints.json  glass_67Li2S_small_constraints.json  glass_70Li2S_constraints.json  glass_70Li2S_small_constraints.json  glass_75Li2S_constraints.json  glass_75Li2S_small_constraints.json  sio2_glass_constraints.json
data/xrd_measurements/GeO2/: F_of_Q.csv  F_of_Q_big.csv  T_of_r.csv  T_r_preprocess.py
data/xrd_measurements/Li3PS4/: F_of_Q.csv  F_of_Q_orig.csv  S_of_Q.csv  g_of_r.csv
data/xrd_measurements/Li3PS4_gamma/: F_of_Q.csv
data/xrd_measurements/NaTaCl6/: F_of_Q.csv  F_of_Q_actual.csv  T_of_r.csv  g_r.csv
data/xrd_measurements/Si/: annealed-J-of-R.csv
data/xrd_measurements/SiO2/: F_of_Q.csv  I_Q  T_r
data/xrd_measurements/li2.99_po3.38_n0.41/: F_of_Q.csv
docs/: tasks.md
scripts/: constraint_test.py  cooper_LBFG_test.py  cooper_test.py  cooper_test_2.py  cooper_test_3.py  cooper_test_4.py  cooper_test_5.py  dF.py  dat_to_csv.py  generate_cif.py  initial_amorphization_post_quench_0.XDATCAR  initial_amorphization_post_quench_0.xyz  initial_amorphization_pre_melt_0.xyz  mdCooper.py  mdFIRE.py  melt_quench_0_post_quench_0.XDATCAR  melt_quench_0_post_quench_0.xyz  melt_quench_0_pre_melt_0.xyz  melt_quench_1_post_quench_0.XDATCAR  melt_quench_1_post_quench_0.xyz  melt_quench_1_pre_melt_0.xyz  melt_quench_2_post_quench_0.xyz  melt_quench_2_pre_melt_0.xyz  new_json_cooper_test.py  random_md.h5md  run_sio2.py  run_test.py  train.py
scripts/wandb/: latest-run
scripts/wandb/run-20260201_184052-48hhmwni/: run-48hhmwni.wandb
scripts/wandb/run-20260201_205022-ps6gbqr7/: run-ps6gbqr7.wandb
scripts/wandb/run-20260202_200001-3kjxpo8e/: run-3kjxpo8e.wandb
scripts/wandb/run-20260203_112340-oaigiy0z/: run-oaigiy0z.wandb
scripts/wandb/run-20260203_121947-vf0i00g9/: run-vf0i00g9.wandb
scripts/wandb/run-20260203_134410-3nmpz44i/: run-3nmpz44i.wandb
scripts/wandb/run-20260203_135757-rwys3rd0/: run-rwys3rd0.wandb
scripts/wandb/run-20260203_135920-ef32kc7l/: run-ef32kc7l.wandb
scripts/wandb/run-20260203_140108-9yixlxpl/: run-9yixlxpl.wandb
scripts/wandb/run-20260205_084355-lzqs04k6/: run-lzqs04k6.wandb
scripts/wandb/run-20260205_084510-jawl5tv0/: run-jawl5tv0.wandb
scripts/wandb/run-20260205_101400-fupq212u/: run-fupq212u.wandb
scripts/wandb/run-20260205_101512-n6oi1diy/: run-n6oi1diy.wandb
scripts/wandb/run-20260205_110220-oa2222wu/: run-oa2222wu.wandb
testing/: Li3PS4.cif  TorchSimOrder.py  TorchSim_test.ipynb  cooper_with_constraints.py  glass_structure_constraints.json
torchdisorder/: __init__.py
torchdisorder/common/: __init__.py  neighbors.py  target_rdf.py  utils.py
torchdisorder/constraints/: __init__.py  geo2_generator.py  sio2_generator.py
torchdisorder/engine/: __init__.py  callbacks.py  constrained.py  constrained_optimizer.py  optimizer.py  order_params.py  torchsim_trainer.py  trainer.py  unconstrained.py
torchdisorder/model/: __init__.py  calculator.py  generator.py  loss.py  rdf.py  rdf_old.py  scattering.py  xrd.py
torchdisorder/viz/: __init__.py  plotting.py
(+674 files in other folders)
