[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "torchdisorder"
version = "0.2.0"
description = "Differentiable generation of amorphous atomic structures from diffraction data"
authors = ["Feugmo Group <cfeugmo@uwaterloo.ca>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/feugmo-group/torchdisorder"
repository = "https://github.com/feugmo-group/torchdisorder"
keywords = [
    "materials-science",
    "amorphous-materials",
    "diffraction",
    "machine-learning",
    "pytorch",
    "constrained-optimization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
packages = [{include = "torchdisorder"}]

# ---------------------------------------------------------------------------
# NOTE ON TORCH INSTALLATION
# Poetry cannot conditionally pull from different PyPI indexes per platform,
# so torch must be installed MANUALLY before or after `poetry install`:
#
#   Linux  (CUDA 12.8):  pip install torch==2.9.1 --index-url https://download.pytorch.org/whl/cu128
#   macOS  (CPU only):   pip install torch==2.9.1
#
# torch is listed here only so the dependency graph is aware of it;
# Poetry will NOT install it automatically — do the manual step above first.
# ---------------------------------------------------------------------------

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# --- Core scientific stack (pinned to your environment) ---
torch            = "2.9.1"          # install manually per platform — see note above
numpy            = "2.4.1"
scipy            = "1.16.0"
pandas           = "2.3.1"

# --- Atomistic / materials science ---
ase              = "3.25.0"
pymatgen         = "2025.6.14"
matscipy         = "1.1.0"
spglib           = "2.6.0"

# --- ML / training infrastructure ---
pytorch-lightning = "2.5.2"
torch-ema        = "0.3"
torchmetrics     = "1.7.4"
wandb            = "0.21.0"
cooper-optim     = "1.0.1"
mace-torch       = "0.3.13"
torch-sim-atomistic = "0.5.0"
e3nn             = "0.4.4"

# --- Config / experiment management ---
hydra-core       = "1.3.2"
omegaconf        = "2.3.0"
ConfigArgParse   = "1.7.1"

# --- Plotting / output ---
plotly           = "6.2.0"
matplotlib       = "3.10.3"

# --- Data / IO ---
h5py             = "3.15.1"
tables           = "3.10.2"
lmdb             = "1.7.2"

# --- Utilities ---
tqdm             = "4.67.1"
joblib           = "1.5.1"
pyyaml           = "6.0.2"
networkx         = "3.6.1"

[tool.poetry.group.dev.dependencies]
pytest           = ">=7.0.0"
pytest-cov       = ">=4.0.0"
black            = ">=23.0.0"
isort            = ">=5.12.0"
ruff             = ">=0.0.260"
mypy             = ">=1.0.0"
ipython          = "9.4.0"
ipywidgets       = "8.1.7"

[tool.poetry.group.docs.dependencies]
sphinx           = ">=6.0.0"
sphinx-rtd-theme = ">=1.2.0"
myst-parser      = ">=1.0.0"

[tool.poetry.scripts]
torchdisorder-train    = "torchdisorder.scripts.train:main"
torchdisorder-generate = "torchdisorder.constraints.sio2_generator:main"

# ---------------------------------------------------------------------------
# Linting / formatting
# ---------------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=torchdisorder --cov-report=term-missing"