[tool.poetry]
name = "torchdisorder"
version = "0.1.0"
description = "Differentiable Amorphous Structure Generation from Scattering Data"
authors = ["Feugmo Group "]
license = "MIT"
readme = "README.md"
repository = "https://github.com/feugmo-group/torchdisorder"
keywords = ["pytorch", "materials-science", "molecular-dynamics", "machine-learning", "diffraction"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
torch = "^2.9.0"
torch-sim-atomistic = "^0.5.1"
ase = "^3.27.0"
pymatgen = "^2025.10.7"
mace-torch = "^0.3.14"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
wandb = "^0.24.2"
pytorch-lightning = "^2.6.1"
nvidia-ml-py3 = "^7.352.0"
ipython = "^9.10.0"
ipywidgets = "^8.1.8"
anywidget = "^0.9.21"
dash = "^4.0.0"
plotly = "^6.5.2"
nvalchemi-toolkit-ops = "^0.2.0"
pandas = "^3.0.0"
torchmetrics = "^1.8.2"
vesin = "^0.4.2"
vesin-torch = "^0.4.2"
warp-lang = "^1.11.1"
cooper-optim = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pre-commit = "*"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
psutil = "^7.0.0"

[tool.poetry.group.lint.dependencies]
ruff = "*"
codespell = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 90
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",
    "ANN003",
    "ANN401",
    "C408",
    "COM812",
    "D205",
    "EM101",
    "EM102",
    "ERA001",
    "FIX002",
    "N803",
    "N806",
    "PLR0912",
    "PLR0913",
    "PLR2004",
    "PLW2901",
    "PTH",
    "S301",
    "S311",
    "SIM105",
    "TD",
    "TRY003",
]
pydocstyle.convention = "google"
isort.split-on-trailing-comma = false
isort.lines-after-imports = 2
pep8-naming.ignore-names = ["get_kT", "kT"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["ANN201", "D", "INP001", "S101"]
"examples/**/*" = ["B018", "T201"]
"examples/tutorials/**/*" = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.codespell]
check-filenames = true
ignore-words-list = ["convertor"]

[tool.pytest.ini_options]
addopts = ["-p no:warnings"]
testpaths = ["tests"]